# rust-starter

./: .env.example  .gitignore  Cargo.toml  generate_models.sh  schema.sql
src/: auth_service.rs  db.rs  encryption.rs  jwt.rs  main.rs  organization_handlers.rs  user_handlers.rs
src/entities/: mod.rs  organization.rs  prelude.rs  project.rs  user.rs
