[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web
axum = { version = "0.6.1" }
tokio = { version = "1.24.1", features = ["macros", "io-util"] }
validator = { version = "0.16.0", features = ["derive"] }
jsonwebtoken = { version = "8.2.0" }
serde = { version = "1.0.152" }
serde_json = "1.0.91"

# Db
sea-orm = { version = "^0.10.6", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
sqlx = "0.6.2"

# Util
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16" }
chrono = { version = "0.4.23" }
once_cell = "1.17.0"
rayon = "1.6.1"
lazy_static = "1.4.0"
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }
dotenvy = "0.15.6"

[profile.release]
debug = 1

[features]
dhat-heap = []

[dev-dependencies]
criterion = "0.4"
dhat = { version = "0.3.2" }

[[bench]]
name = "yt_benchmark"
harness = false
